[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Sword.gd" type="Script" id=1]
[ext_resource path="res://Assets/swords/sword_bronze1.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "attack1"
length = 0.3
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 5.34058e-005, -4.76837e-006 ), Vector2( 5.34058e-005, -4.76837e-006 ), Vector2( 5.34058e-005, -4.76837e-006 ), Vector2( 5.34058e-005, -4.76837e-006 ), Vector2( 5.34058e-005, -4.76837e-006 ), Vector2( 5.34058e-005, -4.76837e-006 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 54.5922, -70.638, 74.9122, 157.25, 190.959, 190.959 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 5.34058e-005, -4.76837e-006 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 54.5922 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 14.0565, 44.5148 )

[node name="Sword" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

rotation = 0.952814
texture = ExtResource( 2 )
offset = Vector2( -0.306717, -38.476 )
_sections_unfolded = [ "Offset", "Region", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/attack1 = SubResource( 1 )
anims/idle = SubResource( 2 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="Area2D_Sword" type="Area2D" parent="Sprite" index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Visibility" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D_Sword" index="0"]

position = Vector2( -3.34653, -56.4503 )
scale = Vector2( 1.16324, 0.583639 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform", "Visibility" ]

[connection signal="animation_finished" from="Sprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[connection signal="area_entered" from="Sprite/Area2D_Sword" to="." method="_on_Area2D_Sword_area_entered"]


